--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,15 @@ font-family: 'Martian Mono', monospace; */
 body {
 	/* agregamos un alto de 100 o de 80 para que siempre se muestre todo dentro del viewport*/
 	min-height: 100vh;
-	background-color: yellow;
+	/*background-color: yellow;*/
+	background: linear-gradient(250deg, red, rgb(6, 16, 127));
 	/* Centrar con display grid*/
 	display: grid;
 	place-items: center;
 	margin: 20px 0 20px 0;
 }
 .calculadora {
-	background-color: #574bee;
+	background-color: #2e288b;
 	color: white;
 	/* 
 	- Con gap le damos una separacion a cada boton entre si
@@ -33,17 +34,20 @@ body {
 	*/
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	gap: 0.2rem;
+	gap: 0.6rem;
 	/* hacemos que trabaje en un ancho total del 60% en mobile y 350px en desktop (el mobile first revisar en el media query*/
 	width: 350px;
 	padding: 0.8rem;
 	border-radius: 1rem;
+	height: 60%;
+	border:  solid 2px;
+	border-color: #10095a;
 }
 
 .pantalla {
 	/* usamos grid column para hacer que la pantalla de la calculadora ocupe el 100% del ancho */
 	grid-column: 1 / 5;
-	background-color: #322a8c;
+	background-color:  #2e98d2; /* #322a8c;*/
 	border-radius: 0.8rem;
 	padding: 1rem;
 	font-size: 3rem;
@@ -51,4 +55,23 @@ body {
 	margin-bottom: 1rem;
 	font-family: monospace;
 	color: black;
+	border: solid 0.1px;
+}
+button {
+	border-radius: 70px;
+	background-color: #2e98d2;
+	font-size: 2rem;
+	border: 0;
+	
+}
+
+#igual{
+	background-color: rgb(30, 146, 12);
+	
+}
+
+#clear {
+	background-color: rgb(188, 18, 18);
+	color: white;
+	
 }
