--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,9 @@ button {
 	background-color: #2e98d2;
 	font-size: 2rem;
 	border: 0;
-	
+	/* box-shadow: 60px -16px teal; */
+	box-shadow: 1px 3px 8px 5px rgba(0, 0, 0, 0.3);
+	margin: 3px;
 }
 
 #igual{
